# Recoil

./: Cargo.toml  README.md
examples/ecommerce-example/: Cargo.toml  README.md  compose.yaml
examples/ecommerce-example/orders-service/: Cargo.toml  Dockerfile
examples/ecommerce-example/orders-service/api/: Cargo.toml
examples/ecommerce-example/orders-service/api/src/: main.rs
examples/ecommerce-example/orders-service/entity/src/: order.rs  order_item.rs
examples/ecommerce-example/orders-service/migration/src/: m20220101_000001_create_table.rs
examples/ecommerce-example/orders-service/src/: main.rs
examples/ecommerce-example/products-service/: Cargo.toml  Dockerfile
examples/ecommerce-example/products-service/src/: main.rs
examples/ecommerce-example/users-service/: Cargo.toml  Dockerfile
examples/ecommerce-example/users-service/api/: Cargo.toml
examples/ecommerce-example/users-service/api/src/: main.rs
examples/ecommerce-example/users-service/entity/src/: user.rs
examples/ecommerce-example/users-service/migration/: Cargo.toml
examples/ecommerce-example/users-service/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250702_224217_seeding.rs
examples/ecommerce-example/users-service/src/: main.rs
recoil-client/: Cargo.toml  README.md
recoil-client/src/: participant.rs
recoil-coordinator/: Cargo.toml  README.md
recoil-coordinator/src/: errors.rs  main.rs  metrics.rs  participant.rs  remote_client.rs  timeout.rs
recoil-errors/: Cargo.toml
recoil-manager/: Cargo.toml
(+5 files in other folders)
