[package]
name = "recoil-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["v4"] }

recoil-client = { path = "../recoil-client" }
recoil-errors = { path = "../recoil-errors" }
