[workspace]
members = ["api", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.3", features = ["macros"] }
